# GeoSAM2

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  NOTICE  README.md  geosam2_render.py  inference.py  pyproject.toml  requirements.txt  segment_glb.py  setup.py  single_view_point_prompt_infer.py
docs/adr/: 0001-strict-pbr-part-object-glb.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: glb-part-object-segmentation.md
example/sample_00/: depth_0000.exr  depth_0001.exr  depth_0002.exr  depth_0003.exr  depth_0004.exr  depth_0005.exr  depth_0006.exr  depth_0007.exr  depth_0008.exr  depth_0009.exr  depth_0010.exr  depth_0011.exr  meta.json  point_prompts_scale1.json  point_prompts_scale2.json  point_prompts_scale3.json  point_prompts_scale4.json
example/sample_01/: depth_0000.exr  depth_0001.exr  depth_0002.exr  depth_0003.exr  depth_0004.exr  depth_0005.exr  depth_0006.exr  depth_0007.exr  depth_0008.exr  depth_0009.exr  depth_0010.exr  depth_0011.exr  meta.json
example/sample_02/: depth_0000.exr  depth_0001.exr  depth_0002.exr  depth_0003.exr  depth_0004.exr  depth_0005.exr  depth_0006.exr  depth_0007.exr  depth_0008.exr  (+5 more)
geosam2/: __init__.py  cache.py  exporter.py  geosam2_runner.py  pipeline.py  pipeline_errors.py
sam2/: automatic_mask_generator_geosam2.py  build_sam.py  sam2_image_predictor_geosam2.py  sam2_video_predictor_geosam2.py
scripts/: run_example.sh
tests/: test_automatic_face_labels.py  test_default_geosam2_runner.py  test_pbr_part_object_export.py  test_pipeline_behavior.py  test_prompt_driven_segmentation.py  test_reliable_coarse_filtering.py  test_render_cache_and_gpu.py  test_source_object_boundaries.py  test_visualization_debug_artifacts.py
utils/: inference_utils.py  mode_ext.cpp  mode_ext.py
(+20 files in other folders)
